--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "socket-io": "^1.0.0",
     "socket.io": "^2.3.0"
