--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "crypto-js": "^3.1.9-1",
     "detect-port": "^1.3.0",
     "express": "^4.17.1",
     "react": "^16.11.0",
